--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,4 +1,4 @@
-name: ansible test
+name: Python package
 
 on: [push]
 
@@ -6,11 +6,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 4
       matrix:
         python-version: [3.6]
 
     steps:
-      - name: ansible playbook test
+      - name: checkout
+      - uses: actions/checkout@v1
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
         run: |
           pip install ansible
-          ansible-playbok main.yml
