--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -19,3 +19,6 @@ jobs:
       - name: Install dependencies
         run: |
           pip install ansible
+      - name: Run playbook
+        run: |
+          ansible-playbook main.yml
