--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: docker container
-        uses: docker://centos:7
+      #- name: docker container
+      #  uses: docker://centos:7
       - uses: actions/checkout@master
       - name: test
         run: |
