--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -12,4 +12,5 @@ jobs:
       # - uses: actions/checkout@master
       - name: test
         run: |
-          yum -y install httpd
+          docker ps -a
+          docker images
