--- a/.github/workflows/_pythonpackage.yml
+++ b/.github/workflows/_pythonpackage.yml
@@ -16,9 +16,20 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
-          pip install ansible
-      - name: Run playbook
+          pip install ansible pyvmomi
+
+      - name: setup vcsim
         run: |
-          ansible-playbook main.yml
+          cd /tests
+          ansible-galaxy install sky_joker.ansible_vmware_govcsim_provisioner -p roles
+          ansible-playbook vcsim-provisioner.yml
+
+      - name: test
+        run: ls
+
+      #- name: Run playbook
+      #  run: |
+      #    ansible-playbook main.yml
