--- a/.github/workflows/_pythonpackage.yml
+++ b/.github/workflows/_pythonpackage.yml
@@ -5,30 +5,34 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.6]
-
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: |
-          pip install ansible pyvmomi docker-compose
-
-      - name: setup vcsim
-        run: |
-          cd tests/
-          ansible-galaxy install sky_joker.ansible_vmware_govcsim_provisioner -p roles
-          ansible-playbook vcsim-provisioner.yml
-
       - name: test
         run: ls
+
+#    strategy:
+#      max-parallel: 4
+#      matrix:
+#        python-version: [3.6]
+#
+#    steps:
+#      - uses: actions/checkout@v1
+#      - name: Set up Python ${{ matrix.python-version }}
+#        uses: actions/setup-python@v1
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#
+#      - name: Install dependencies
+#        run: |
+#          pip install ansible pyvmomi docker-compose
+#
+#      - name: setup vcsim
+#        run: |
+#          cd tests/
+#          ansible-galaxy install sky_joker.ansible_vmware_govcsim_provisioner -p roles
+#          ansible-playbook vcsim-provisioner.yml
+#
+#      - name: test
+#        run: ls
 
       #- name: Run playbook
       #  run: |
