--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - name: test
-        run: pip show
+        run: pip3 show
 
       #- name: docker container
       #  uses: docker://centos:7
