--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,7 +10,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - name: test
-        run: pip3 show
+        run: |
+          python -m pip install --upgrade pip
+          pip list
 
       #- name: docker container
       #  uses: docker://centos:7
